# deltas

./: .gitignore  AGENTS.md  API.md  ARCHITECTURE.md  README.md  formulation.json  main.py  pyproject.toml  tickers.json
constants/: roles.toml  tickers.toml
core/: pricing.py  signals.py  strategies.py  volatility.py
data/lake/prices/silver/source=yfinance/asset_type=etf/interval=1d/ticker=QQQ/year=1999/: prices.parquet
data/lake/prices/silver/source=yfinance/asset_type=etf/interval=1d/ticker=QQQ/year=2000/: prices.parquet
data/lake/prices/silver/source=yfinance/asset_type=etf/interval=1d/ticker=QQQ/year=2001/: prices.parquet
data/lake/prices/silver/source=yfinance/asset_type=etf/interval=1d/ticker=QQQ/year=2002/: prices.parquet
data/lake/prices/silver/source=yfinance/asset_type=etf/interval=1d/ticker=QQQ/year=2003/: prices.parquet
data/lake/prices/silver/source=yfinance/asset_type=etf/interval=1d/ticker=QQQ/year=2004/: prices.parquet
data/lake/prices/silver/source=yfinance/asset_type=etf/interval=1d/ticker=QQQ/year=2005/: prices.parquet
data/lake/prices/silver/source=yfinance/asset_type=etf/interval=1d/ticker=QQQ/year=2006/: prices.parquet
ingest/: prices.py
repo/: fundamentals_repo.py  prices_repo.py
trading-desk/: app.py
trading-desk/pages/: fundamentals.py
trading_desk/: __init__.py  app.py
trading_desk/components/: __init__.py  conviction_panel.py  market_clock.py  watchlist.py
trading_desk/pages/: __init__.py  _common.py  backtests.py  catalysts.py  fundamentals.py  macro.py  options_calculator.py  strategy_lab.py
utils/: fs.py
(+53 files in other folders)
