[project]
name = "deltas"
version = "0.1.0"
description = "Recursive AI agent intelligence analysis framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "bokeh>=3.9.0",
    "duckdb>=1.5.2",
    "fastapi>=0.136.1",
    "holoviews>=1.22.1",
    "httpx>=0.28.1",
    "hvplot>=0.12.2",
    "jupyterlab>=4.5.7",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "pandas-market-calendars>=5.3.2",
    "panel>=1.8.10",
    "polars>=1.40.1",
    "py-vollib>=1.0.1",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "rich>=15.0.0",
    "scipy>=1.17.1",
    "typer>=0.25.1",
    "typing>=3.10.0.0",
    "uvicorn>=0.46.0",
    "vectorbt>=0.28.2",
    "watchfiles>=1.1.1",
    "yfinance>=1.3.0",
]
